tests/snapshots/issues__issue_359_multi_regex_unicode.snap
---
source: tests/issues.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> ああa                                                                         " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"  1/1/RE                                                                     0/0"
"> a                                                                             "
cursor: (24, 4)
