tests/snapshots/issues__issue_359_multi_regex_unicode@001.snap
---
source: tests/issues.rs
description: "input: items [\"ああa\"]\noptions: --regex -q a"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> ああa                                                                         " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"  1/1/RE                                                                     0/0"
"> a                                                                             "
cursor: (24, 4)
