tests/snapshots/issues__issue_361_literal_space_control.snap
---
source: tests/issues.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo  bar                                                                      "
"> foo bar                                                                       "
"  2/2                                                                        0/0"
"> foo\ bar                                                                      "
cursor: (24, 11)
