tests/snapshots/issues__issue_361_literal_space_invert.snap
---
source: tests/issues.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo  bar                                                                      "
"  1/2                                                                        0/0"
"> !foo\ bar                                                                     "
cursor: (24, 12)
