tests/snapshots/issues__issue_361_literal_space_invert@001.snap
---
source: tests/issues.rs
description: "input: items [\"foo  bar\", \"foo bar\"]\noptions: -q !foo\\ bar"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo  bar                                                                      "
"  1/2                                                                        0/0"
"> !foo\ bar                                                                     "
cursor: (24, 12)
