tests/snapshots/issues__issue_547_null_match-2.snap
---
source: tests/issues.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> Test Test Test                                                                "
"  1/1                                                                        0/0"
"> Test                                                                          "
cursor: (24, 7)
