tests/snapshots/issues__issue_547_null_match@001.snap
---
source: tests/issues.rs
description: "input: items [\"\\0Test Test Test\"]\noptions: "
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> Test Test Test                                                                "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
