tests/snapshots/issues__issue_547_null_match@002.snap
---
source: tests/issues.rs
description: "input: items [\"\\0Test Test Test\"]\noptions: \nafter:\n  @type \"Test\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> Test Test Test                                                                "
"  1/1                                                                        0/0"
"> Test                                                                          "
cursor: (24, 7)
