tests/snapshots/issues__issue_929_double_width_chars.snap
---
source: tests/issues.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> 中文测试                                                                      " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
cursor: (24, 11)
